# qwerty-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  agent.py  interface.py  knowledge_importer.py  protocol.py  pyproject.toml  test_all.py
knowledge/: linux.json  personality.json  wikipedia.json
memory/: genius_ngram.json  genius_rnn.json  learned.json
qwerty_agent/: agent.py  brain.py  constitution.json  genius.py  interface.py  knowledge_importer.py  planner.py  protocol.py
qwerty_agent/knowledge/: general.json  git.json  osdev.json  programming.json  rust.json  science.json
qwerty_agent/recipes/: create_package.json  debug_error.json  explore.json  learn_from_web.json  publish.json  run_tests.json
workflows/: fix_compile_error.json
