[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qwerty-agent"
version = "2.0.0"
description = "Zero-dependency symbolic AI agent. Pure Python stdlib. Runs anywhere."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kasish"}
]
requires-python = ">=3.10"
keywords = ["ai", "agent", "symbolic", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/kasish/qwerty"
Source = "https://github.com/kasish/qwerty"
Tracker = "https://github.com/kasish/qwerty/issues"

[project.scripts]
qwerty = "agent:main"
qwerty-json = "protocol:main"
qwerty-interface = "interface:main"

[tool.setuptools.packages.find]
include = ["*"]
