[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qwerty-agent"
version = "3.0.0"
description = "Tool-use agent with optional LLM brain via Ollama. Pure Python stdlib."
readme = "README.md"
license = "MIT"
authors = [
    {name = "KasishStar"}
]
requires-python = ">=3.10"
keywords = ["ai", "agent", "llm", "ollama", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/KasishStar/qwerty-agent"
Source = "https://github.com/KasishStar/qwerty-agent"
Tracker = "https://github.com/KasishStar/qwerty-agent/issues"

[project.scripts]
qwerty = "qwerty_agent.interface:main"
qwerty-json = "qwerty_agent.protocol:main"

[tool.setuptools.packages.find]
include = ["qwerty_agent*"]

[tool.setuptools.package-data]
qwerty_agent = ["*.json"]
